# tracking-trans-hate-bills

./: .gitignore  README.md  Snakefile  aclu.ipynb  aclu.json  custom_stopwords.json  env-template  generate_urls.ipynb  get_aclu_data.ipynb  get_ttl_data.ipynb  harmonize.ipynb  legiscan.py  legiscan_example.ipynb  legiscan_lookup.ipynb  legiscan_retrieve_legislation.ipynb  legiscan_viz.ipynb  literate.ipynb  new_retrieve_legislation.ipynb  notes.ipynb  openstates_integration.ipynb  pyproject.toml  resolver_hints.json  resolver_map.json  retrieve_legislation.ipynb  scratch.ipynb  tracktranslegislation-meta.json  tracktranslegislation.json  word_freq.ipynb  word_freq_2.ipynb  word_freq_old.ipynb
artifacts/: aggregate.json  categorized.json  legal_stopwords.json  openstates_jurisdictions.json  resolver_map.json  resolver_output.txt
configuration/: custom_stopwords.json  custom_whitelist.json  resolver_hints.json
datasets/: aclu.json  equalitytexas.json  geography.json  openstates_country_jurisdictions.json  openstates_state_jurisdictions.json  standard_regions.json  tracktranslegislation.json
investigate/: aggregate.ipynb  analyze_neutral_corpus.ipynb  categorize.ipynb  conserved_phrases.ipynb  generate_legal_stopwords.ipynb  hate-emails-ngrams.ipynb  sponsor_graph.ipynb
lib/: legiscan.py
obsolete/: aclu_retrieve_legislation.ipynb  analyze_neutral_corpus.ipynb  harmonize.ipynb  prepare_nltk.ipynb  scratch.ipynb  word_freq_old.ipynb
retrieval/: build_neutral_corpus.ipynb  generate_aggregated.ipynb  get_aclu_data.ipynb  get_equality_texas.ipynb  get_ttl_data.ipynb  (+4 more)
(+1439 files in other folders)
